--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -46,7 +46,6 @@ set_real_ip_from 104.244.78.162;
 set_real_ip_from 104.244.78.232;
 set_real_ip_from 104.254.90.195;
 set_real_ip_from 107.174.146.25;
-set_real_ip_from 107.189.1.175;
 set_real_ip_from 107.189.12.7;
 set_real_ip_from 107.189.12.88;
 set_real_ip_from 107.189.13.180;
@@ -110,9 +109,7 @@ set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 131.72.79.38;
-set_real_ip_from 13.236.183.167;
 set_real_ip_from 135.125.239.70;
-set_real_ip_from 13.54.88.251;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
 set_real_ip_from 139.99.172.11;
@@ -129,7 +126,6 @@ set_real_ip_from 149.102.153.38;
 set_real_ip_from 149.202.79.101;
 set_real_ip_from 149.202.79.129;
 set_real_ip_from 149.56.44.47;
-set_real_ip_from 152.32.181.53;
 set_real_ip_from 152.32.199.79;
 set_real_ip_from 152.32.206.127;
 set_real_ip_from 152.53.106.19;
@@ -402,6 +398,7 @@ set_real_ip_from 185.227.68.78;
 set_real_ip_from 185.231.102.51;
 set_real_ip_from 185.233.100.23;
 set_real_ip_from 185.235.146.29;
+set_real_ip_from 185.241.208.115;
 set_real_ip_from 185.241.208.185;
 set_real_ip_from 185.241.208.202;
 set_real_ip_from 185.241.208.204;
@@ -984,7 +981,6 @@ set_real_ip_from 2605:6400:30:f174:42:42:42:42;
 set_real_ip_from 2605:6400:30:f174:4:3:2:1;
 set_real_ip_from 2605:6400:30:f174:cafe::;
 set_real_ip_from 2605:6400:30:f623:5a78:29a6:8492:27b0;
-set_real_ip_from 2605:6400:30:f7fa:c230:6fe8:a09a:5836;
 set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
 set_real_ip_from 2605:6400:40:fe09::2;
 set_real_ip_from 2605:a140:2262:7686::1;
@@ -1436,7 +1432,6 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 set_real_ip_from 2a0e:97c0:3e3:a0e::1;
 set_real_ip_from 2a0e:97c0:3e3:b6::1;
 set_real_ip_from 2a0e:97c0:3ea:882::1;
-set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
@@ -1477,6 +1472,7 @@ set_real_ip_from 2a12:a800:1:1:2:58:56:35;
 set_real_ip_from 2a12:a800:1:1:2:58:56:43;
 set_real_ip_from 2a12:a800:1:1:2:58:56:93;
 set_real_ip_from 2a12:a800:1:1:45:154:98:33;
+set_real_ip_from 2a12:a800:2:1:185:241:208:115;
 set_real_ip_from 2a12:a800:2:1:185:241:208:185;
 set_real_ip_from 2a12:a800:2:1:185:241:208:202;
 set_real_ip_from 2a12:a800:2:1:185:241:208:204;
@@ -1536,8 +1532,6 @@ set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
 set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.44.238.25;
-set_real_ip_from 3.25.193.126;
-set_real_ip_from 3.27.191.214;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.50.124;
 set_real_ip_from 37.114.50.142;
@@ -1575,6 +1569,7 @@ set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.70.158;
 set_real_ip_from 45.138.16.107;
 set_real_ip_from 45.138.16.113;
+set_real_ip_from 45.138.16.161;
 set_real_ip_from 45.138.16.164;
 set_real_ip_from 45.138.16.222;
 set_real_ip_from 45.138.16.230;
@@ -1839,7 +1834,6 @@ set_real_ip_from 93.123.109.116;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.185.165.211;
 set_real_ip_from 93.88.75.35;
-set_real_ip_from 93.90.74.28;
 set_real_ip_from 93.90.74.29;
 set_real_ip_from 93.95.227.37;
 set_real_ip_from 93.95.228.125;
