--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -53,6 +53,7 @@ allow 107.189.13.251;
 allow 107.189.13.254;
 allow 107.189.13.91;
 allow 107.189.14.43;
+allow 107.189.2.108;
 allow 107.189.29.184;
 allow 107.189.30.49;
 allow 107.189.30.69;
@@ -251,6 +252,7 @@ allow 185.129.61.8;
 allow 185.129.61.9;
 allow 185.129.62.62;
 allow 185.129.62.63;
+allow 185.130.47.58;
 allow 185.14.31.113;
 allow 185.150.28.13;
 allow 185.154.110.142;
@@ -1239,6 +1241,7 @@ allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:6d80:1e01:3a13::;
+allow 2a07:e03:2a::bcde;
 allow 2a07:e042:1:181::1;
 allow 2a07:e042:1:182::1;
 allow 2a09:61c0::20;
@@ -1531,7 +1534,6 @@ allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.114.50.124;
@@ -1554,6 +1556,7 @@ allow 38.135.24.32;
 allow 38.135.24.33;
 allow 38.135.24.72;
 allow 38.135.25.2;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1570,7 +1573,6 @@ allow 45.134.225.36;
 allow 45.137.70.158;
 allow 45.138.16.107;
 allow 45.138.16.113;
-allow 45.138.16.161;
 allow 45.138.16.164;
 allow 45.138.16.222;
 allow 45.138.16.230;
@@ -1665,7 +1667,6 @@ allow 45.9.148.50;
 allow 45.9.156.101;
 allow 45.9.168.18;
 allow 45.9.168.192;
-allow 45.9.168.70;
 allow 45.94.31.68;
 allow 45.95.169.104;
 allow 45.95.169.109;
