--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -111,7 +111,6 @@ allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
-allow 2003:d6:8f31:e200:be24:11ff:febf:c7d9;
 allow 2400:8901::f03c:94ff:fe7f:59f6;
 allow 2400:8901::f03c:95ff:fe89:4a88;
 allow 2400:8905::f03c:95ff:fe67:ec03;
@@ -133,9 +132,13 @@ allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
 allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
+allow 2602:f6f6:2:3637::1;
+allow 2602:f6f6:2:90f1::1;
+allow 2602:f6f6:2:941d::1;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
+allow 2602:f6f6:2:dc17::1;
 allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
@@ -166,12 +169,6 @@ allow 2605:6400:20:c26:5163:253e:1ef6:d896;
 allow 2605:6400:20:ff9::1;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
-allow 2605:6400:30:f174::;
-allow 2605:6400:30:f174::42;
-allow 2605:6400:30:f174:42:42::;
-allow 2605:6400:30:f174:42:42:42:0;
-allow 2605:6400:30:f174:42:42:42:42;
-allow 2605:6400:30:f174:4:3:2:1;
 allow 2605:6400:30:f414:bf7c:cd6f:39bc:c682;
 allow 2605:6400:30:f623:5a78:29a6:8492:27b0;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
@@ -416,7 +413,6 @@ allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
-allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
 allow 2a06:1700:0:50::11;
@@ -484,7 +480,6 @@ allow 2a0b:f4c2:1::156;
 allow 2a0b:f4c2:1::157;
 allow 2a0b:f4c2:1::158;
 allow 2a0b:f4c2:1::160;
-allow 2a0b:f4c2:1::161;
 allow 2a0b:f4c2:1::162;
 allow 2a0b:f4c2:1::163;
 allow 2a0b:f4c2:1::164;
@@ -678,6 +673,7 @@ allow 2a12:a800:2:1:45:138:16:107;
 allow 2a12:a800:2:1:45:138:16:113;
 allow 2a12:a800:2:1:45:138:16:164;
 allow 2a12:a800:2:1:45:138:16:222;
+allow 2a12:a800:2:1:45:138:16:230;
 allow 2a12:a800:2:1:45:138:16:231;
 allow 2a12:a800:2:1:45:138:16:239;
 allow 2a12:a800:2:1:45:138:16:240;
